--- a/hiddenHTML/index copy.html
+++ b/hiddenHTML/index copy.html
@@ -54,43 +54,44 @@
 
 
 
-<style>
-.jumbotron {
-  color: white;
-  background-image: url("images/frontImagesCopy/altDiagnosis.png");/*url("https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c");*/
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-}
 
-.testingthis {
-  text-align: center;
-position: absolute;
-top: 30%;
-left: 33%;
-}
-</style>
 
 <div class="jumbotron jumbotron-fluid">
   <div class="hero-wrap js-fullheight">
     <div class="overlay"></div>
     <div class="container-fluid px-0">
       <div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-        <img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/diagnosispic.png" alt="">
         <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
-
           <div class="text mt-5">
+            <center><span><img src="images/hand-logo.png" height='100px'></span>
+              <br>
             <h1 class="mb-3"><span>SuiSense</span></h1>
-            <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+            <p style='font-size: 14px !important;'>Determining whether your struggling loved one is on the path to suicide and providing professional support.</p></center>
             <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
-
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<section>
+  <div class='container'>
+    <div class='row'>
+
+      <center>
+      <div class="text mt-5">
+        <h1 class="mb-3"><span>SuiSense</span></h1>
+        <p>Determining whether your struggling loved one is on the path to suicide and providing professional support.</p>
+        <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
+      </div>
+      </center>
+
+    </div>
+  </div>
+
+</section>
+
 
 <section class="ftco-section ftco-no-pt ftc-no-pb ">
   <div class="container">
@@ -631,7 +632,7 @@ left: 33%;
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 bg-primary p-4">
               <h2 class="ftco-heading-2">SuiSense</h2>
-              <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+              <p>Determining whether your struggling loved one is on the path to suicide and providing professional support. </p>
             </div>
           </div>
           <div class="col-md">
