--- a/analysis2.html
+++ b/analysis2.html
@@ -530,7 +530,7 @@ A person’s mental state will begin destabilizing, and they will begin slipping
         <div class="col-md">
           <div class="ftco-footer-widget mb-4 bg-primary p-4">
             <h2 class="ftco-heading-2">SuiSense</h2>
-            <p>Determining whether your struggling loved one is on the path to suicide and providing professional support.</p>
+            <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
           </div>
         </div>
         <div class="col-md">
