--- a/pairings.html
+++ b/pairings.html
@@ -189,7 +189,7 @@ display: center;
                    <form id = "GOAT" role="form" class="contactForm">
                      <label>Please upload a profile image of yourself here: </label><br>
                          <label for="file-upload" class="custom-file-upload">
-                             Custom Upload
+                             Upload Picture
                          </label>
 
                          <br>
@@ -309,7 +309,7 @@ display: center;
                      <form id = "GOAT1" role="form" class="contactForm">
                        <label>Please upload a profile image of yourself here: </label><br>
                            <label for="file-upload" class="custom-file-upload">
-                               Custom Upload
+                               Upload Picture
                            </label>
 
                            <br>
