added error notice

--- a/analysis.html
+++ b/analysis.html
@@ -101,6 +101,7 @@
             <br><br>
           <h2 class="mb-4">Initial Screening</h2>
           <p>Please fill out the form below with text that you copied from a message or remembered hearing. This screening will determine whether your loved one is likely depressed or suicidal.</p>
+          <p>Note: If there is an issue when using the algorithm, please reload a few times and it will resolve itself. This is due to not having access to expensive server power.</p>
           <!--<div class="container">
                 <div id="accordion">
                   <div class="row">
