--- a/analysis2.html
+++ b/analysis2.html
@@ -100,6 +100,7 @@ left: 33%;
         <center>
           <br><br>
         <h2 class="mb-4">Baseline Screening</h2>
+        <p>Note: If there is an issue when using the algorithm, please reload a few times and it will resolve itself. This is due to not having access to expensive server power.</p>
         <p>Please fill out the form below with text that you copied from a message or remembered hearing before your loved one had a change in attitude. This will help us determine a more accurate assessment since we can compare the changes in their texts and tone.</p>
         <hr>
         </center>
@@ -129,6 +130,7 @@ left: 33%;
         <center>
           <br><br>
         <h2 class="mb-4">Progression Model</h2>
+        <p>Note: If there is an issue when using the algorithm, please reload a few times and it will resolve itself. This is due to not having access to expensive server power.</p>
         <p>Input messages from a loved one in order to classify them into 6 different categories of depression and suicide based on psychologist Jessie Bering's classification system.</p>
         <div class="container">
               <div id="accordion">
