--- a/pairings.html
+++ b/pairings.html
@@ -521,8 +521,8 @@ background-color: #6a28ff;
                 </div>
                 <div class="card-body">
                   <h3 class="card-title"><a href="">Your Match:</a></h3>
-                  <h5 class="card-title"><a href="">Martin Williams</a></h5>
-                  <p class="card-text"><b>Email:</b> martinwilliams@gmail.com</p>
+                  <h5 class="card-title"><a href="">John Greene</a></h5>
+                  <p class="card-text"><b>Email:</b> johngreene@gmail.com</p>
                   <p class="card-text"><b>Home Address:</b> 750 W 10th St, Gilroy, CA</p>
                   <p class="card-text"><b>Therapist Type:</b> Psychotherapist</p>
                   <p class="card-text"><b>Availability:</b> 10/10/2020-10/24/2020, 9:00am - 5:30pm</p>
@@ -539,8 +539,8 @@ background-color: #6a28ff;
                           </div>
                           <div class="card-body">
                             <h3 class="card-title"><a href="">Your Match:</a></h3>
-                            <h5 class="card-title"><a href="">Dr. Shereen Mohsen</a></h5>
-                            <p class="card-text"><b>Email:</b> shereenmohsen@gmail.com</p>
+                            <h5 class="card-title"><a href="">Dr. Maya Manza</a></h5>
+                            <p class="card-text"><b>Email:</b> mayamanza@gmail.com</p>
                             <p class="card-text"><b>Office Address:</b> 1101 S Winchester Blvd, Suite J-205, San Jose, California, 95128</p>
                             <p class="card-text"><b>Therapist Type:</b> Licensed Clinical Psychologist</p>
                             <p class="card-text"><b>Availability:</b> 10/6/2020-10/20/2020, 9:00am - 5:30pm</p>
