added back possible error contingencies

--- a/analysis2.html
+++ b/analysis2.html
@@ -100,8 +100,27 @@ left: 33%;
         <center>
           <br><br>
         <h2 class="mb-4">Baseline Screening</h2>
-        <p>Note: If there is an issue when using the algorithm, please reload a few times and it will resolve itself. This is due to not having access to expensive server power.</p>
         <p>Please fill out the form below with text that you copied from a message or remembered hearing before your loved one had a change in attitude. This will help us determine a more accurate assessment since we can compare the changes in their texts and tone.</p>
+        <div class="container">
+              <div id="accordion">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="card">
+                      <div class="card-header">
+                      <a class="card-link" data-toggle="collapse"  href="#menuthree" aria-expanded="false" aria-controls="menuthree"> Getting an error "Something went wrong"?<span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+                      </div>
+                      <div id="menuthree" class="collapse">
+                        <div class="card-body">
+                          <p>
+                          Unfortunately, our server power is limited due to our current financial restrictions. Our current server periodically
+                        refreshes due to this limited server power. Please simply refresh the page and try again to avoid this error.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         <hr>
         </center>
       </div>
@@ -118,7 +137,7 @@ left: 33%;
   </style>
 
 
-<iframe src="https://suisense.pythonanywhere.com/advancedprogression" width="100%" height="900" frameBorder="0"></iframe>
+<iframe src="https://suisense.pythonanywhere.com/advancedprogression" width="100%" height="950" frameBorder="0"></iframe>
 
   </center>
 </section>
@@ -130,10 +149,25 @@ left: 33%;
         <center>
           <br><br>
         <h2 class="mb-4">Progression Model</h2>
-        <p>Note: If there is an issue when using the algorithm, please reload a few times and it will resolve itself. This is due to not having access to expensive server power.</p>
         <p>Input messages from a loved one in order to classify them into 6 different categories of depression and suicide based on psychologist Jessie Bering's classification system.</p>
         <div class="container">
               <div id="accordion">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="card">
+                      <div class="card-header">
+                      <a class="card-link" data-toggle="collapse"  href="#menuone" aria-expanded="false" aria-controls="menuone"> Getting an error "Something went wrong"?<span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+                      </div>
+                      <div id="menuone" class="collapse">
+                        <div class="card-body">
+                          <p>
+                          Unfortunately, our server power is limited due to our current financial restrictions. Our current server periodically
+                        refreshes due to this limited server power. Please simply refresh the page and try again to avoid this error.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="row">
                   <div class='col-md-1'>
                   </div>
