changed up button

--- a/pairings.html
+++ b/pairings.html
@@ -188,7 +188,7 @@ display: center;
                    <center>
                    <form id = "GOAT" role="form" class="contactForm">
                      <label>Please upload a profile image of yourself here: </label><br>
-                         <label for="file-upload" class="custom-file-upload">
+                         <label for="file-upload" class="btn btn-primary py-3 px-4">
                              Upload Picture
                          </label>
 
@@ -229,7 +229,7 @@ display: center;
 
               <div class="row justify-content-center mb-5 element-animate">
                 <div class="col-md-8 text-center">
-                  <button class="btn btn-primary py-3 px-5" type="button" onClick="beastfunction1()">Submit</button>
+                  <button class="btn btn-primary py-3 px-5" type="button" onClick="beastfunction1()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Submit&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
                 </div>
               </div>
               <style>
