unlinked rae+jelly

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ left: 33%;
                       <img src="images/capalogo.png" width ="100%"alt="Template">
                       <br>
                       <br>
-                      <h3><a href="https://capmovement.org/" >CAP Association</a></h3>
+                      <h3>CAP Association</h3>
                         <p>The Children's Addiction Prevention Association (CAP Association) is a 501(c)(3) nonprofit that hopes to prevent drug abuse among teenagers. Their process hopes to provide the future generation with the tools for careful decision-making. Dr. Ruebsamen indicated that drug abuse is strongly related with depression, so we sought out to build a partnership with CAPA, as our missions align. CAPA has promoted and supported SuiSense, and the user base of SuiSense has grown as a result. CAPA has presented SuiSense at their events, and neighboring schools have begun showing interest.
                         </p>
                         <br>
@@ -461,7 +461,7 @@ left: 33%;
                         <img src="images/mhilogo.png" width="42%"alt="Template">
                         <br>
                         <br>
-                        <h3><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
+                        <h3>Mental Health Initiative</center></h3>
                     <p>The Mental Health Initiative (MHI) is a Bay Area organization dedicated to eliminating the single story surrounding a typical bay area student stereotype. MHI is highly motivated in dismantling the stigma around mental health problems in the Bay Area and bridging the gap between parents and students regarding important mental health problems. To promote mental wellbeing, we established a partnership with MHI in order to increase our impact and user base. SuiSense has been supported and promoted at MHI’s local events and meetings, such as those at the Saratoga Library.
                     </p>
                           <br>
