--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ left: 33%;
     	</div>
     </section>
 
-    <section class="ftco-section">
+    <!-- <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -417,7 +417,7 @@ left: 33%;
               </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="ftco-section bg-light">
         <div class="container">
