added alert disclaimer

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   </head>
   <body>
+    
 
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
@@ -36,6 +37,10 @@
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
+
+        <script>
+          setTimeout(function() { alert("DISCLAIMER: This application is still early in development and should by no means be considered a clinical diagnosis. Do not take any predictions from our AI models seriously, as they are still in need of heavy development. If you are suffering from mental health conditions, please refer to clinically-verified therapists."); }, 1000);
+          </script>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
