--- a/analysis.html
+++ b/analysis.html
@@ -101,6 +101,8 @@
             <br><br>
           <h2 class="mb-4">Initial Screening</h2>
           <p>Please fill out the form below with text that you copied from a message or remembered hearing. This screening will determine whether your loved one is likely depressed or suicidal.</p>
+          <br>
+          <p><b>Please note that this application is still in development, and no prediction should be taken seriously. Refer to clinically-verified professionals for mental health diagnoses.</b></p>
           <div class="container">
                 <div id="accordion">
                   <div class="row">
