--- a/analysis2.html
+++ b/analysis2.html
@@ -101,6 +101,8 @@ left: 33%;
           <br><br>
         <h2 class="mb-4">Baseline Screening</h2>
         <p>Please fill out the form below with text that you copied from a message or remembered hearing before your loved one had a change in attitude. This will help us determine a more accurate assessment since we can compare the changes in their texts and tone.</p>
+        <br>
+          <p><b>Please note that this application is still in development, and no prediction should be taken seriously. Refer to clinically-verified professionals for mental health diagnoses.</b></p>
         <div class="container">
               <div id="accordion">
                 <div class="row">
@@ -150,6 +152,8 @@ left: 33%;
           <br><br>
         <h2 class="mb-4">Progression Model</h2>
         <p>Input messages from a loved one in order to classify them into 6 different categories of depression and suicide based on psychologist Jessie Bering's classification system.</p>
+        <br>
+          <p><b>Please note that this application is still in development, and no prediction should be taken seriously. Refer to clinically-verified professionals for mental health diagnoses.</b></p>
         <div class="container">
               <div id="accordion">
                 <div class="row">
